# elisa_client_api

./: .gitignore  .gitmodules  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.sh
doc/: .conf.py.swp  README  conf.py  elisa_client_api.rst  utilities.rst
doc/doctrees/: elisa_client_api.doctree  environment.pickle  index.doctree  modules.doctree  utilities.doctree
doc/html/: .buildinfo  elisa_client_api.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  utilities.html
doc/html/_sources/: index.txt  modules.txt
elisa_client_api/: elisa.py  exception.py  messageInsert.py  messageUpdate.py  searchCriteria.py
elisa_client_api/core/: authentication.py  message.py  messageField.py  request.py  restServer.py  searchField.py  serializer.py
pymain/: main.py
src/elisa_client_api/: authentication.py  elisa.py  elisa_config.py  elisa_get.py  elisa_insert.py  elisa_reply.py  elisa_update.py  elisa_utilhelper.py  exception.py  messageInsert.py  messageRead.py  messageReply.py  messageUpdate.py  optionsBuilder.py  request.py  restServer.py  searchCriteria.py  searchField.py  serializer.py
src/elisa_client_api/core/: authentication.py  message.py  messageField.py  request.py  restServer.py  searchField.py  serializer.py
src/elisa_client_api/scripts/: elisa_config.py  elisa_get.py  elisa_insert.py  elisa_reply.py  elisa_update.py  elisa_utilhelper.py
test/: certificationTest.py  elisaTest.py  regression  serializeTest.py
