[project]
name = "elisa_client_api"
version = "1.0.0"
# url = "https://github.com/DUNE-DAQ/elisa_client_api"
# long_description = file: docs/README.md
# long_description_content_type = text/markdown

[tool.setuptools.packages.find]
where = ["elisa_client_api/python/src", "elisa_client_api/python/bin", "pymain"]

# [tool.setuptools.package-dir]
# elisa_client_api="elisa_client_api" # all the imports are bad without this.
# elisa_client_api_main="pymain" # ... scripts that come without a main() function, that I had to redefine here manually...

[project.scripts]
elisa_config = "elisa_client_api.main:execute_elisa_config_script" # ... and refer to here.
elisa_get    = "elisa_client_api.main:execute_elisa_get_script"
elisa_insert = "elisa_client_api.main:execute_elisa_insert_script"
elisa_reply  = "elisa_client_api.main:execute_elisa_reply_script"
elisa_update = "elisa_client_api.main:execute_elisa_update_script"
