[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elisa_client_api"
version = "1.0.0"

[tool.setuptools]
package-dirs = {elisa_client_api_main="pymain", elisa_client_api= "elisa_client_api/python/src", elisa_client_api_scripts= "elisa_client_api/python/bin"}


[project.scripts]
elisa_config = "elisa_client_api.main:execute_elisa_config_script" # ... and refer to here.
elisa_get    = "elisa_client_api.main:execute_elisa_get_script"
elisa_insert = "elisa_client_api.main:execute_elisa_insert_script"
elisa_reply  = "elisa_client_api.main:execute_elisa_reply_script"
elisa_update = "elisa_client_api.main:execute_elisa_update_script"
