[metadata]
name = elisa_client_api
version = attr: elisa_client_api.__version__
url = https://github.com/DUNE-DAQ/elisa_client_api
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = =src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    elisa_get = elisa_client_api.elisa_get:main
